# CSG

./: AABB.h  CMakeLists.txt  CSGDemoTest.sh  CSGEnum.h  CSGFoundry.cc  CSGFoundry.h  CSGNode.cc  CSGNode.h  CSGPrim.cc  CSGPrim.h  CSGPrimSpec.cc  CSGPrimSpec.h  CSGSolid.cc  CSGSolid.h  CSGTarget.cc  CU.cc  CU.h  Geo.cc  Geo.h  Grid.cc  Grid.h  NP.hh  README.rst  Scan.cc  Scan.h  Tran.cc  Tran.h  build.sh  csg_intersect_tree.h  env.sh  foundry.py  foundry.sh  foundry_plt.py  go.sh  qat4.h  run.sh  sutil_vec_math.h
tests/: CMakeLists.txt  CSGDemoTest.cc  CSGFoundryLoadTest.cc  CSGFoundryTest.cc  CSGNameTest.cc  CSGNodeTest.cc  CSGSolidTest.cc  CUTest.cc  DemoGeo.cc  DemoGeo.h  ScanTest.cc  TranTest.cc  qat4.cc
